--- a/participantList.html
+++ b/participantList.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <h1>Список <br> участников</h1>
+    <p class="topParagraph">Вы можете также передать права администратора компании человеку, которого нет в списке. Для этого отправьте ему ссылку на компанию и попросите зарегистрироваться.</p>
+    <p class="smallParagraph">Ссылка на подключение для вашей команды</p>
+    <p class="linkParagraph">https://t.me/drugba_bot/23ag49x2</p>
     <ul>
         <li>
             <div class="participantInfo">
@@ -20,7 +24,35 @@
         </li>
         <li>
             <div class="participantInfo">
+                <p id="p">Василий Петрович</p>
+                <a href="">Назначить админом</a>
+            </div>
+            <a href="">Delete</a>
+        </li>
+        <li>
+            <div class="participantInfo">
                 <p id="p">Инна Ивановна</p>
+                <a href="">Назначить админом</a>
+            </div>
+            <a href="">Delete</a>
+        </li>
+        <li>
+            <div class="participantInfo">
+                <p id="p">Василий Петрович</p>
+                <a href="">Назначить админом</a>
+            </div>
+            <a href="">Delete</a>
+        </li>
+        <li>
+            <div class="participantInfo">
+                <p id="p">Инна Ивановна</p>
+                <a href="">Назначить админом</a>
+            </div>
+            <a href="">Delete</a>
+        </li>
+        <li>
+            <div class="participantInfo">
+                <p id="p">Василий Петрович</p>
                 <a href="">Назначить админом</a>
             </div>
             <a href="">Delete</a>
@@ -41,7 +73,7 @@
         </li>
         <li>
             <div class="participantInfo">
-                <p id="p">Инна Ивановна</p>
+                <p id="p">Василий Петрович</p>
                 <a href="">Назначить админом</a>
             </div>
             <a href="">Delete</a>
@@ -49,6 +81,27 @@
         <li>
             <div class="participantInfo">
                 <p id="p">Инна Ивановна</p>
+                <a href="">Назначить админом</a>
+            </div>
+            <a href="">Delete</a>
+        </li>
+        <li>
+            <div class="participantInfo">
+                <p id="p">Василий Петрович</p>
+                <a href="">Назначить админом</a>
+            </div>
+            <a href="">Delete</a>
+        </li>
+        <li>
+            <div class="participantInfo">
+                <p id="p">Инна Ивановна</p>
+                <a href="">Назначить админом</a>
+            </div>
+            <a href="">Delete</a>
+        </li>
+        <li>
+            <div class="participantInfo">
+                <p id="p">Василий Петрович</p>
                 <a href="">Назначить админом</a>
             </div>
             <a href="">Delete</a>
@@ -61,6 +114,7 @@
             <a href="">Delete</a>
         </li>
     </ul>
+    <a href="" class="bottomBtn">Назад</a>
     <script src="script.js"></script>
 </body>
 
