--- a/participantList.html
+++ b/participantList.html
@@ -11,113 +11,124 @@
 
 <body>
     <h1>Список <br> участников</h1>
-    <p class="topParagraph">Вы можете также передать права администратора компании человеку, которого нет в списке. Для этого отправьте ему ссылку на компанию и попросите зарегистрироваться.</p>
-    <p class="smallParagraph">Ссылка на подключение для вашей команды</p>
-    <p class="linkParagraph">https://t.me/drugba_bot/23ag49x2</p>
+    <div class="participantSection">
+        <p class="topParagraph">Вы можете также передать права администратора компании человеку, которого нет в списке.
+            Для
+            этого отправьте ему ссылку на компанию и попросите зарегистрироваться.</p>
+        <p class="smallParagraph">Ссылка на подключение для вашей команды</p>
+        <p class="linkParagraph">https://t.me/drugba_bot/23ag49x2</p>
+    </div>
     <ul>
         <li>
             <div class="participantInfo">
                 <p id="p">Инна Ивановна</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
         <li>
             <div class="participantInfo">
                 <p id="p">Василий Петрович</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
         <li>
             <div class="participantInfo">
                 <p id="p">Инна Ивановна</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
         <li>
             <div class="participantInfo">
                 <p id="p">Василий Петрович</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
         <li>
             <div class="participantInfo">
                 <p id="p">Инна Ивановна</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
         <li>
             <div class="participantInfo">
                 <p id="p">Василий Петрович</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
         <li>
             <div class="participantInfo">
                 <p id="p">Инна Ивановна</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
         <li>
             <div class="participantInfo">
                 <p id="p">Инна Ивановна</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
         <li>
             <div class="participantInfo">
                 <p id="p">Василий Петрович</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
         <li>
             <div class="participantInfo">
                 <p id="p">Инна Ивановна</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
         <li>
             <div class="participantInfo">
                 <p id="p">Василий Петрович</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
         <li>
             <div class="participantInfo">
                 <p id="p">Инна Ивановна</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
         <li>
             <div class="participantInfo">
                 <p id="p">Василий Петрович</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
         <li>
             <div class="participantInfo">
-                <p id="p">Инна Ивановна</p>
+                <p id="p">Анна Ивановна</p>
                 <a href="">Назначить админом</a>
             </div>
-            <a href="">Delete</a>
+            <a href=""></a>
         </li>
     </ul>
-    <a href="" class="bottomBtn">Назад</a>
+    <div class="participantSection">
+        <p class="topParagraph">Вы можете также передать права администратора сбора человеку, которого нет в списке.
+            Для
+            этого отправьте ему ссылку на компанию и попросите зарегистрироваться.</p>
+        <p class="smallParagraph">Ссылка на подключение к сбору</p>
+        <p class="linkParagraph">https://t.me/drugba_bot/23ag49x2</p>
+    </div>
+    <footer>
+        <a href="" class="bottomBtn">Назад</a>
+    </footer>
     <script src="script.js"></script>
 </body>
 
 </html>
-<!-- onclick="participantClick()" -->
-<!-- && e.target.tagName == "DIV" -->
