--- a/participantList.html
+++ b/participantList.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="participantList.css">
 </head>
 
 <body>
@@ -128,7 +128,7 @@
     <footer>
         <a href="" class="bottomBtn">Назад</a>
     </footer>
-    <script src="script.js"></script>
+    <script src="participantList.js"></script>
 </body>
 
 </html>
