--- a/feeHistory.html
+++ b/feeHistory.html
@@ -10,19 +10,115 @@
 </head>
 
 <body>
-    <h1>Создание сбора</h1>
+    <h1>История сборов</h1>
     <div class="companyInfo">
         <a href="" class="active">Сегодня</a>
         <a href="">7 дней</a>
         <a href="">30 дней</a>
         <a href="">Год</a>
         <a href="" class="calendarButton"></a>
-        <ul>
-            <li>
-                <p>Доступны оплаченные сборы</p>
-                <p>190</p>
-            </li>
-        </ul>
+        <table>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Сбор завершен</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Василий Петрович присоединился</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Василий Петрович присоединился</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Василий Петрович внес 500р</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Создан сбор</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Создан сбор</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Василий Петрович присоединился</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Василий Петрович присоединился</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Василий Петрович внес 500р</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Создан сбор</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Сбор завершен</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Василий Петрович присоединился</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Василий Петрович присоединился</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Василий Петрович внес 500р</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Создан сбор</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Создан сбор</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Василий Петрович присоединился</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Василий Петрович присоединился</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Василий Петрович внес 500р</td>
+            </tr>
+            <tr>
+                <td>25.03.23</td>
+                <td>11:15</td>
+                <td>Создан сбор</td>
+            </tr>
+        </table>
     </div>
 
     <footer>
