--- a/companySettings.html
+++ b/companySettings.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="companySettings.css">
+    <style>
+        footer{
+            background: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -78,7 +83,7 @@
     </div>
 
     <footer>
-        <a href="" class="bottomBtn">Назад</a>
+        <a href="" class="bottomBtn">Закрыть</a>
     </footer>
 </body>
 
