--- a/companyInfoEdit.html
+++ b/companyInfoEdit.html
@@ -33,16 +33,16 @@
 
 <body>
     <h1>Редактирование <br> информации о <br> компании</h1>
-    <form action="">
+    <form action="" name="companyInfoEditForm">
         <input type="text" placeholder="Название компании *" required>
         <input type="text" placeholder="Сфера деятельности *" required>
-        <input type="text" placeholder="Количество человек в компании *" required>
+        <input type="number" placeholder="Количество человек в компании *" required>
         <input type="text" placeholder="Ваши имя и фамилия *" required>
         <input type="text" placeholder="Должность">
         <input type="text" placeholder="Контактный телефон *" required>
         <input type="text" placeholder="E-mail *" required>
         <div class="formFooter">
-            <button class="closeBtn"></button>
+            <button class="closeBtn" type="button"></button>
             <button class="saveBtn">Сохранить</button>
         </div>
     </form>
