--- a/companyRegistration2.html
+++ b/companyRegistration2.html
@@ -13,12 +13,12 @@
 
 <body>
     <h1>Регистрация <br> компании</h1>
-    <form action="">
+    <form action="" name="companyRegistrationForm">
         <p class="smallParagraph">Название компании *</p>
         <input type="text" placeholder="Любое, если компания друзей" class="required" required>
         <p class="smallParagraph">Сфера деятельности *</p>
         <input type="text" placeholder="Строительство" class="required" required>
-        <input type="text" placeholder="Количество человек в компании *" class="required" required>
+        <input type="number" placeholder="Количество человек в компании *" class="required" required>
         <input type="text" placeholder="Ваши имя и фамилия *" class="required" required>
         <input type="text" placeholder="Должность" class="required">
         <input type="text" placeholder="Контактный телефон *" class="required" required>
