--- a/feeCreation.html
+++ b/feeCreation.html
@@ -14,7 +14,7 @@
 <body>
     <h1>Создание сбора</h1>
     <p>Пожалуйста, заполните данные о сборе</p>
-    <form action="">
+    <form action="" name="feeCreationForm">
         <input type="text" placeholder="Тип события" class="required" required>
         <input type="text" placeholder="Кому собираем" class="required" required>
         <input type="text" placeholder="Дата события" class="required" required>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="formButtons">
-                <button>Отмена</button>
+                <button type="button">Отмена</button>
                 <button class="middleBtn">Запустить</button>
                 <button>Оплатить</button>
             </div>
