--- a/formEdit.html
+++ b/formEdit.html
@@ -26,7 +26,7 @@
 
 <body>
     <h1>Редактирование <br> анкеты</h1>
-    <form action="">
+    <form action="" name="formEditForm">
         <input type="text" placeholder="Редактирование анкеты *" class="required" required>
         <input type="text" placeholder="Дата рождения *" class="required" required>
         <input type="text" placeholder="Часовой пояс *" required>
@@ -35,7 +35,7 @@
         <div class="formFooter">
             <input type="checkbox" name="check" id="" required>
             <label for="">Я согласен на обработку моих персональных данных в соответствии с Политикой и Пользовательским соглашением</label>
-            <button class="closeBtn">Закрыть</button>
+            <button class="closeBtn" type="button">Закрыть</button>
             <button class="saveBtn">Сохранить</button>
         </div>
     </form>
