--- a/userRegistration.html
+++ b/userRegistration.html
@@ -11,15 +11,23 @@
     <img src="woman.svg" alt="">
     <h1>Регистрация</h1>
     <p>Пожалуйста, введите данные для регистрации. После этого вы сможете начать сбор</p>
-    <form action="">
+    <form action="" name="userRegistrationForm">
         <input type="text" placeholder="Имя и фамилия" class="required" required>
-        <input type="text" placeholder="Дата рождения" class="required" required>
-        <input type="text" placeholder="Часовой пояс" class="required" required>
+        <div class="dateInput">
+            <input id="dateInput" type="date" onchange="this.nextElementSibling.innerHTML = !this.value ? 'Дата рождения' : this.value.split('-')[2]+'.'+this.value.split('-')[1]+'.'+this.value.split('-')[0]" id="birthday" name="birthday" required>
+            <label for="birthday">Дата рождения</label>
+        </div>
+        <input type="text" id="timeZoneInput" placeholder="Часовой пояс" class="required" required>
         <div class="formFooter">
             <input type="checkbox" name="check" id="" required>
             <label for="">Я согласен на обработку моих персональных данных в соответствии с Политикой и Пользовательским соглашением</label>
             <button>Сохранить</button>
         </div>
     </form>
+    <script>
+        document.getElementById("dateInput").style.transform = "scaleX("+ (document.getElementById("dateInput").nextElementSibling.offsetWidth) +")"
+        
+        document.getElementById("timeZoneInput").value = "Часовой пояс: " + Intl.DateTimeFormat().resolvedOptions().timeZone
+    </script>
 </body>
 </html>
