--- a/feeCreation.html
+++ b/feeCreation.html
@@ -15,16 +15,16 @@
     <h1>Создание сбора</h1>
     <p>Пожалуйста, заполните данные о сборе</p>
     <form action="" name="feeCreationForm">
-        <input type="text" placeholder="Тип события" class="required" required>
-        <input type="text" placeholder="Кому собираем" class="required" required>
-        <input type="text" placeholder="Дата события" class="required" required>
-        <input type="text" placeholder="Ссылка на внешнюю копилку/карту" class="required" required>
+        <input type="text" placeholder="Тип события" required>
+        <input type="text" placeholder="Кому собираем" required>
+        <input type="text" placeholder="Дата события" required>
+        <input type="text" placeholder="Ссылка на внешнюю копилку/карту" required>
         <p class="smallParagraph">Ссылки на желаемый подарок
             *</p>
         <div class="presents">
             <div class="present" id="present0">
-                <input type="text" placeholder=""
-                    value="https://www.amazon.com/s?k=lego+home&adgrpid=146129792827&hvadid=632890143278&hvdev=c&hvlocphy=1012729&hvnetw=g&hvqmt=b&hvrand=97401635243092047&hvtargid=kwd-158692537&hydadcr=29492_14573937&tag=hydglogoo-20&ref=pd_sl_18ntj7m5et_b">
+                <input type="text" placeholder="Ссылка"
+                    value="" required>
                 <button onclick="addPresent(event)" type="button"></button>
             </div>
         </div>
