--- a/companySettings.html
+++ b/companySettings.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="companySettings.css">
     <style>
-        footer{
+        footer {
             background: none;
         }
     </style>
@@ -41,7 +41,10 @@
         <a href="">7 дней</a>
         <a href="">30 дней</a>
         <a href="">Год</a>
-        <a href="" class="calendarButton"></a>
+        <div class="calendar">
+            <a href="" class="calendarButton"></a>
+            <input type="date" name="" id="">
+        </div>
         <ul>
             <li>
                 <p>Доступны оплаченные сборы</p>
