--- a/feeHistory.html
+++ b/feeHistory.html
@@ -16,7 +16,10 @@
         <a href="">7 дней</a>
         <a href="">30 дней</a>
         <a href="">Год</a>
-        <a href="" class="calendarButton"></a>
+        <div class="calendar">
+            <a href="" class="calendarButton"></a>
+            <input type="date" name="" id="">
+        </div>
         <table>
             <tr>
                 <td>25.03.23</td>
