--- a/userRegistration.html
+++ b/userRegistration.html
@@ -62,7 +62,7 @@
         const date = new Date();
         const offset = date.getTimezoneOffset()/ 60 * -1;
         let timeOption = document.querySelector('option[value="'+(offset).toFixed(1)+'"]').selected = true;
-        document.getElementById("timeZoneInput").value = "Часовой пояс: " + Intl.DateTimeFormat().resolvedOptions().timeZone
+        // document.getElementById("timeZoneInput").value = "Часовой пояс: " + Intl.DateTimeFormat().resolvedOptions().timeZone
     </script>
 </body>
 </html>
