fix input animation

--- a/companyRegistration2.html
+++ b/companyRegistration2.html
@@ -8,26 +8,56 @@
     <title>Document</title>
     <link rel="stylesheet" href="registration.css">
     <link rel="stylesheet" href="companyRegistration2.css">
-
+    <style>
+        .smallParagraph{
+            /* background-color: pink; */
+            font-size: 14px;
+            transform: translate(13px, 31px);
+            opacity: 0.5;
+            transition: 0.3s;
+            pointer-events: none;
+        }
+        form > input{
+            margin-bottom: 0;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Регистрация <br> компании</h1>
     <form action="" name="companyRegistrationForm">
         <p class="smallParagraph">Название компании *</p>
-        <input type="text" placeholder="Любое, если компания друзей" class="required" required>
+        <input type="text" placeholder="" class="required" required>
         <p class="smallParagraph">Сфера деятельности *</p>
-        <input type="text" placeholder="Строительство" class="required" required>
-        <input type="number" placeholder="Количество человек в компании *" class="required" required>
-        <input type="text" placeholder="Ваши имя и фамилия *" class="required" required>
-        <input type="text" placeholder="Должность" class="required">
-        <input type="text" placeholder="Контактный телефон *" class="required" required>
-        <input type="text" placeholder="E-mail *" class="required" required>
+        <input type="text" placeholder="" class="required" required>
+        <p class="smallParagraph">Количество человек в компании *</p>
+        <input type="number" placeholder="" class="required" required>
+        <p class="smallParagraph">Ваши имя и фамилия *</p>
+        <input type="text" placeholder="" class="required" required>
+        <p class="smallParagraph">Должность</p>
+        <input type="text" placeholder="" class="required">
+        <p class="smallParagraph">Контактный телефон *</p>
+        <input type="tel" placeholder="" class="required" required>
+        <p class="smallParagraph">E-mail *</p>
+        <input type="email" placeholder="" class="required" required>
 
     </form>
     <footer>
         <a href="" class="bottomBtn">Сохранить</a>
     </footer>
+    <script>
+        let inputs = document.getElementsByTagName("input")
+        for (let i of inputs) {
+            i.onclick = function() {
+                this.previousElementSibling.style.transform = 'none'
+                this.previousElementSibling.style.fontSize = "10px"
+            }
+            i.onblur = function() {
+                this.previousElementSibling.style.transform = 'translate(13px, 31px)'
+                this.previousElementSibling.style.fontSize = "14px"
+            }
+        }
+    </script>
 </body>
 
 </html>
